Make Doom rice.

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -551,7 +551,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(5 5 5 8 5 13)
+colors=(5 5 5 8 3 9)
 
 
 # Text Options
@@ -785,7 +785,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="debian_small"
+ascii_distro="artix_small"
 
 # Ascii Colors
 #
@@ -796,7 +796,7 @@ ascii_distro="debian_small"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(8 13)
+ascii_colors=(9)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
