--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,10 +17,10 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
-background-alt = #373B41
+background = #000000
+background-alt = #1a1a1a
 foreground = #C5C8C6
-primary = #c046e8
+primary = #ff5454
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
@@ -95,7 +95,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#c046e8}%mountpoint%%{F-} %percentage_used%%
+label-mounted = %{F#ff5454}%mountpoint%%{F-} %percentage_used%%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -121,8 +121,8 @@ label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+label-indicator-foreground = ${colors.foreground}
+label-indicator-background = ${colors.background-alt}
 
 [module/memory]
 type = internal/memory
@@ -148,12 +148,12 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = %{F#ff5454}%ifname%%{F-} %essid% %local_ip%
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#c046e8}%ifname%%{F-} %local_ip%
+label-connected = %{F#ff5454}%ifname%%{F-} %local_ip%
 
 [module/date]
 type = internal/date
